bug fix in service layer interface und wcf testing

--- a/AutoReservation.Common/AutoReservation.Common.csproj
+++ b/AutoReservation.Common/AutoReservation.Common.csproj
@@ -78,6 +78,8 @@
     </Compile>
     <Compile Include="DataTransferObjects\AutoDto.cs" />
     <Compile Include="DataTransferObjects\AutoKlasse.cs" />
+    <Compile Include="DataTransferObjects\Faults\FaultAutoUnavailable.cs" />
+    <Compile Include="DataTransferObjects\Faults\FaultInvalidDateRange.cs" />
     <Compile Include="DataTransferObjects\KundeDto.cs" />
     <Compile Include="DataTransferObjects\ReservationDto.cs" />
     <Compile Include="Interfaces\IAutoReservationService.cs" />
@@ -92,9 +94,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DataTransferObjects\Faults\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
